...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expression" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VmC-F5-dQk">
                                <rect key="frame" x="30" y="94" width="354" height="26.666666666666671"/>
                                <accessibility key="accessibilityConfiguration" identifier="expression"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQZ-u0-nco">
                                <rect key="frame" x="62" y="563.66666666666663" width="92" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="evaluate"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o6a-XD-Mwp">
                                <rect key="frame" x="294" y="563.66666666666663" width="58" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOv-zJ-maJ">
                                <rect key="frame" x="62" y="471.66666666666669" width="57" height="42.000000000000057"/>
                                <accessibility key="accessibilityConfiguration" identifier="enter"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Enter">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IQL-7c-bGC">
                                <rect key="frame" x="317" y="471.66666666666669" width="35" height="42.000000000000057"/>
                                <accessibility key="accessibilityConfiguration" identifier="+/-"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="+/-">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXI-ga-Ucm">
                                <rect key="frame" x="62" y="655.66666666666663" width="30" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="addition"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Operand" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xeG-gw-g9b">
                                <rect key="frame" x="30.000000000000007" y="146.66666666666666" width="70.666666666666686" height="21.666666666666657"/>
                                <accessibility key="accessibilityConfiguration" identifier="operand"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <nil key="textColor"/>
...
