...
        Operand.text = ""
        Evaluation.text = self.evaluation
    }
    
    func alertMessage(title: String, text: String) {
        let alertController = UIAlertController(title: title, message: text, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Ok", style: .cancel))
        self.present(alertController, animated: true, completion: nil)
    }
    
    func addNumber(num: String, sign: Bool) {
        let returnList = logicalMethods.addNumber(num: num, sign: sign)
        if returnList[0] != "failed" {
...
